authz/graphql/gcs-egress/gcs-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: gcs
spec:
  hosts:
    - storage.googleapis.com
  ports:
    - number: 443
      name: tls
      protocol: TLS
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
    - port:
        number: 443
        name: tls
        protocol: TLS
      hosts:
        - storage.googleapis.com
      tls:
        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-gcs
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
    - name: gcs
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-gcs-through-egress-gateway
spec:
  hosts:
    - storage.googleapis.com
  gateways:
    - mesh
    - istio-egressgateway
  tls:
    - match:
        - gateways:
            - mesh
          port: 443
          sniHosts:
            - storage.googleapis.com
      route:
        - destination:
            host: istio-egressgateway.istio-system.svc.cluster.local
            subset: gcs
            port:
              number: 443
    - match:
        - gateways:
            - istio-egressgateway
          port: 443
          sniHosts:
            - storage.googleapis.com
      route:
        - destination:
            host: storage.googleapis.com
            port:
              number: 443
          weight: 100
